--- a/BootcampDotNetMain/BootcampDotNet.csproj
+++ b/BootcampDotNetMain/BootcampDotNet.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>bootcamp_dotnet_qa</RootNamespace>
+    <RootNamespace>BootcampDotNet</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
