--- a/BootcampDotNet.Common/BootcampDotNet.Common.csproj
+++ b/BootcampDotNet.Common/BootcampDotNet.Common.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>desable</Nullable>
+    <RootNamespace>BootcampDotNet.Common</RootNamespace>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
 </Project>
